--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
         <input name="message" placeholder="Message"/>
         <button>Send</button>
     </form>
+    <button id="share-location">Share Location</button>
     
     <script src="/socket.io/socket.io.js"></script>
     <script src="/js/chat.js"></script>
